// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem Default should render as elements 1`] = `
<DocumentFragment>
  <span
    class="sc-bcXHqe hYpwdP"
    data-rc="GridItem"
  >
    GridItem Content
  </span>
</DocumentFragment>
`;

exports[`GridItem Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe hYpwdP"
    data-rc="GridItem"
  >
    GridItem Content
  </div>
</DocumentFragment>
`;
